<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:focusableInTouchMode="true"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="uk.co.ribot.androidboilerplate.ui.settings.SettingsActivity">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">

    <TextView
        android:id="@+id/id_settings_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_update_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_update_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:textSize="@dimen/text_small_body"
            android:maxLength="4"
            android:hint="@string/hint_update_interval" />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:inputType="numberSigned"
        android:textColor="@android:color/white"/>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>