<resources>
    <string name="app_name">Find my car</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="error_location_available">Location not available</string>
    <string name="path_not_found">The path was not found</string>
    <string name="error_path_location">An error happened while trying to find a route between you and your car.</string>

    <string name="title_activity_maps">Current Place Details on Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <string name="park_title">Car location</string>
    <string name="find_car_title">My initial location</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="save">Save</string>

    <string name="hint_update_interval">Interval for location updates in seconds.</string>
    <string name="error1_update_interval">Interval is obligatory.</string>
    <string name="error2_update_interval">Interval should be bigger than zero.</string>
    <string name="exception_on_map_ready">"onMapReady: "</string>
    <string name="location_title">GPS settings</string>
    <string name="location_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="button_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="network_title">Network settings</string>
    <string name="network_message">Network is not enabled. Do you want to go to settings menu?</string>
    <string name="text_park">Park</string>
    <string name="text_find_my_car">Find my car</string>
    <string name="text_start_over">Start over</string>
</resources>
